[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-openenv"
version = "0.1.0"
description = "Incident response benchmark environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]==0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "incident_response_openenv.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["incident_response_openenv", "incident_response_openenv.server", "app"]
package-dir = { "incident_response_openenv" = ".", "incident_response_openenv.server" = "server" }
